src/ui/snapshots/tct__ui__snapshot_tests__snapshot_board_selector.snap
---
source: src/ui/snapshot_tests.rs
expression: render_to_string(&app)
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ TCT - Terminal Card Tracker                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Boards ──────────────────────────────────────────────────────────────────────────────────────────┐
│> Alpha                                                                                           │
│  Beta                                                                                            │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 BOARDS  ?:help                                                                              ~/.tct
