src/ui/snapshots/tct__ui__snapshot_tests__snapshot_board_view_empty.snap
---
source: src/ui/snapshot_tests.rs
expression: render_to_string(&app)
---
 Empty (0 lists)
  No lists. Press N to create one.



























 NORMAL  ?:help  q:quit                                                                      ~/.tct
