src/ui/snapshots/tct__ui__snapshot_tests__snapshot_board_view_linux_tty.snap
---
source: src/ui/snapshot_tests.rs
expression: render_to_string(&app)
---
 Demo (2 lists)
┌ To Do (2) ─────────────────────────────────────┐┌ Done (1) ──────────────────────────────────────┐
│╔══════════════════════════════════════════════╗││┌──────────────────────────────────────────────┐│
│║Fix login flow                                ║│││Ship release notes                            ││
│║[bug]                                         ║││└──────────────────────────────────────────────┘│
│║[1/3] ≡                                       ║││                                                │
│╚══════════════════════════════════════════════╝││                                                │
│┌──────────────────────────────────────────────┐││                                                │
││Redesign dashboard                            │││                                                │
│└──────────────────────────────────────────────┘││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
└────────────────────────────────────────────────┘└────────────────────────────────────────────────┘
 NORMAL  ?:help                                                                              ~/.tct
