src/ui/snapshots/tct__ui__snapshot_tests__snapshot_board_view_many_labels_wrap.snap
---
source: src/ui/snapshot_tests.rs
expression: render_to_string(&app)
---
 Demo (2 lists)
┌ To Do (2) ─────────────────────────────────────┐┌ Done (1) ──────────────────────────────────────┐
│┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓││┌──────────────────────────────────────────────┐│
│┃Fix login flow                                ┃│││Ship release notes                            ││
│┃[bug][frontend][backend][urgent][blocked]     ┃││└──────────────────────────────────────────────┘│
│┃[needs-review][good first issue]              ┃││                                                │
│┃[documentation][performance]                  ┃││                                                │
│┃[1/3] ≡                                       ┃││                                                │
│┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛││                                                │
│┌──────────────────────────────────────────────┐││                                                │
││Redesign dashboard                            │││                                                │
│└──────────────────────────────────────────────┘││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
└────────────────────────────────────────────────┘└────────────────────────────────────────────────┘
 NORMAL  ?:help                                                                              ~/.tct
