src/ui/snapshots/tct__ui__snapshot_tests__snapshot_card_detail_all_sections_empty.snap
---
source: src/ui/snapshot_tests.rs
expression: render_to_string(&app)
---
 Demo (2 lists)
┌ To Do (2) ─────────────────────────────────────┐┌ Done (1) ──────────────────────────────────────┐
│┌──────────────────────────────────────────────┐││┌──────────────────────────────────────────────┐│
││Fix logi┌ Redesign dashboard ──────────────────────────────────────────────────────────┐        ││
││[bug]   │                                                                              │────────┘│
││[1/3] ≡ │ Description                                                                  │         │
│└────────│  (no description)                                                            │         │
│┏━━━━━━━━│                                                                              │         │
│┃Redesign│══════════════════════════════════════════════════════════════════════════════│         │
│┗━━━━━━━━│                                                                              │         │
│         │ Checklist                                                                    │         │
│         │   (no items)                                                                 │         │
│         │                                                                              │         │
│         │──────────────────────────────────────────────────────────────────────────────│         │
│         │                                                                              │         │
│         │ Labels                                                                       │         │
│         │   (no labels)                                                                │         │
│         │                                                                              │         │
│         │──────────────────────────────────────────────────────────────────────────────│         │
│         │                                                                              │         │
│         │ Due Date                                                                     │         │
│         │   (no due date)                                                              │         │
│         │                                                                              │         │
│         │                                                                              │         │
│         │                                                                              │         │
│         │                                                                              │         │
│         └──────────────────────────────────────────────────────────────────────────────┘         │
│                                                ││                                                │
└────────────────────────────────────────────────┘└────────────────────────────────────────────────┘
 DETAIL  ?:help                                                                              ~/.tct
