src/ui/snapshots/tct__ui__snapshot_tests__snapshot_card_detail_long_checklist_item_wraps.snap
---
source: src/ui/snapshot_tests.rs
expression: render_to_string(&app)
---
 Demo (2 lists)
┌ To Do (2) ─────────────────────────────────────┐┌ Done (1) ──────────────────────────────────────┐
│┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓││┌──────────────────────────────────────────────┐│
│┃Fix logi┌ Fix login flow ──────────────────────────────────────────────────────────────┐        ││
│┃[bug]   │                                                                              │────────┘│
│┃[1/3] ≡ │ Description                                                                  │         │
│┗━━━━━━━━│  Token expires too early.                                                    │         │
│┌────────│                                                                              │         │
││Redesign│  - check refresh                                                             │         │
│└────────│  - add test                                                                  │         │
│         │                                                                              │         │
│         │══════════════════════════════════════════════════════════════════════════════│         │
│         │                                                                              │         │
│         │ Checklist [1/3]                                                              │         │
│         │ » [✓] Reproduce                                                              │         │
│         │   [ ] Write a failing test that reproduces the premature token expiry on     │         │
│         │       refresh, including the clock-skew edge case                            │         │
│         │   [ ] Fix                                                                    │         │
│         │                                                                              │         │
│         │──────────────────────────────────────────────────────────────────────────────│         │
│         │                                                                              │         │
│         │ Labels                                                                       │         │
│         │ [bug]                                                                        │         │
│         │                                                                              │         │
│         │                                                                              │         │
│         │                                                                              │         │
│         └──────────────────────────────────────────────────────────────────────────────┘         │
│                                                ││                                                │
└────────────────────────────────────────────────┘└────────────────────────────────────────────────┘
 DETAIL  ?:help                                                                              ~/.tct
