src/ui/snapshots/tct__ui__snapshot_tests__snapshot_card_detail_long_description_scrollbar.snap
---
source: src/ui/snapshot_tests.rs
expression: render_to_string(&app)
---
 Demo (2 lists)
┌ To Do (2) ─────────────────────────────────────┐┌ Done (1) ──────────────────────────────────────┐
│┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓││┌──────────────────────────────────────────────┐│
│┃Fix logi┌ Fix login flow ──────────────────────────────────────────────────────────────┐        ││
│┃[bug]   │                                                                              │────────┘│
│┃[1/3] ≡ │Description                                                                   │         │
│┗━━━━━━━━│  line 3                                                                     █│         │
│┌────────│  line 4                                                                      │         │
││Redesign│  line 5                                                                      │         │
│└────────│  line 6                                                                      │         │
│         │  line 7                                                                      │         │
│         │  line 8                                                                      │         │
│         │  line 9                                                                      │         │
│         │  line 10                                                                     │         │
│         │                                                                              │         │
│         │══════════════════════════════════════════════════════════════════════════════│         │
│         │                                                                              │         │
│         │Checklist [1/3]                                                               │         │
│         │» [✓] Reproduce                                                               │         │
│         │  [ ] Write failing test                                                      │         │
│         │  [ ] Fix                                                                     │         │
│         │                                                                              │         │
│         │──────────────────────────────────────────────────────────────────────────────│         │
│         │                                                                              │         │
│         │Labels                                                                        │         │
│         │  ● bug                                                                       │         │
│         └──────────────────────────────────────────────────────────────────────────────┘         │
│                                                ││                                                │
└────────────────────────────────────────────────┘└────────────────────────────────────────────────┘
 DETAIL  ?:help                                                                              ~/.tct
